# SSAPy

./: .buildinfo  .codecov.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .pypirc  .readthedocs.yaml  .readthedocs.yml  BUILDING.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.rst  api.html  benchmarks.html  concepts.html  contribution_guide.html  examples.html  genindex.html  index.html  installation.html  objects.inv  post-build.sh  py-modindex.html  pyproject.toml  python.cmake  reference.html  references.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.docker/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user_question.md
.github/workflows/: build-containers.yml  ci.yml  python-publish.yml
JOSS/: paper.bib  paper.md
_images/: inheritance-24621de5677e294542d33474bc8e564caa70d4ce.png.map  inheritance-3463a21f8b387a0ffa23271af499c0533a472229.png.map  inheritance-361a9e3b2c79107e98a7ca82258aa9ad654359e1.png.map  inheritance-37af5839333b9580c33d14249ba83fd62f35a843.png.map  inheritance-60ac5f2193e4e7602774e89991171579824a57e4.png.map  inheritance-77d23fa9ce2a98bfb5937f5d31278eb25b9ebfea.png.map  inheritance-86be43fbcc09682150e3e5c044279b4cd0bb6601.png.map  inheritance-95283a32547744dc7516c85f498339c09f3949a6.png.map  inheritance-ad9bfc3e2085d1bc287ed2ff8123f674790be1a2.png.map  inheritance-c9f54a85ab08764241fd1b3d9a6c5ac7a7951747.png.map  inheritance-e3bf10a63fc9f74e793ea38287ce3feecd2bb051.png.map  inheritance-fc46b8808bc51e60298dc9b22d576e46d1187b0b.png.map
_modules/: index.html
_modules/ssapy/: accel.html  body.html  compute.html  correlate_tracks.html  gravity.html  io.html  linker.html  orbit.html  orbit_solver.html  particles.html  plotUtils.html  propagator.html  rvsampler.html  simple.html  utils.html
_sources/: api.rst.txt  benchmarks.rst.txt  concepts.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  reference.rst.txt
_sources/api/: ssapy.accel.Accel.rst.txt  ssapy.accel.AccelConstNTW.rst.txt  ssapy.accel.AccelDrag.rst.txt  ssapy.accel.AccelEarthRad.rst.txt  ssapy.accel.AccelKepler.rst.txt  ssapy.accel.AccelProd.rst.txt  ssapy.accel.AccelSolRad.rst.txt  ssapy.accel.AccelSum.rst.txt  ssapy.body.Body.rst.txt  ssapy.body.EarthOrientation.rst.txt  ssapy.body.MoonOrientation.rst.txt  ssapy.body.MoonPosition.rst.txt  ssapy.body.PlanetPosition.rst.txt  ssapy.body.SunPosition.rst.txt  ssapy.body.get_body.rst.txt  ssapy.compute.HashableArrayContainer.rst.txt  ssapy.compute.M_v.rst.txt  ssapy.compute.M_v_lambertian.rst.txt  ssapy.compute.altaz.rst.txt  ssapy.compute.calc_M_v.rst.txt  ssapy.compute.calc_gamma.rst.txt  ssapy.compute.calculate_orbital_elements.rst.txt  ssapy.compute.dircos.rst.txt  ssapy.compute.earthShadowCoords.rst.txt  ssapy.compute.earth_shine.rst.txt  ssapy.compute.find_passes.rst.txt  ssapy.compute.getAngle.rst.txt  ssapy.compute.groundTrack.rst.txt  ssapy.compute.keplerian_orbital_elements.rst.txt  ssapy.compute.lagrange_points_lunar_frame.rst.txt  ssapy.compute.lunar_lagrange_points.rst.txt  ssapy.compute.lunar_lagrange_points_circular.rst.txt  ssapy.compute.moon_normal_vector.rst.txt  ssapy.compute.moon_shine.rst.txt  ssapy.compute.nby3shape.rst.txt  ssapy.compute.quickAltAz.rst.txt  ssapy.compute.radec.rst.txt  ssapy.compute.radecRate.rst.txt  ssapy.compute.radecRateObsToRV.rst.txt  ssapy.compute.refine_pass.rst.txt  (+283 more)
_sources/modules/: ssapy.accel.rst.txt  ssapy.body.rst.txt  (+15 more)
api/: ssapy.accel.Accel.html  ssapy.accel.AccelConstNTW.html  ssapy.accel.AccelDrag.html  ssapy.accel.AccelEarthRad.html  ssapy.accel.AccelKepler.html  ssapy.accel.AccelProd.html  ssapy.accel.AccelSolRad.html  ssapy.accel.AccelSum.html  ssapy.body.Body.html  ssapy.body.EarthOrientation.html  ssapy.body.MoonOrientation.html  ssapy.body.MoonPosition.html  ssapy.body.PlanetPosition.html  ssapy.body.SunPosition.html  ssapy.body.get_body.html  ssapy.compute.HashableArrayContainer.html  ssapy.compute.M_v.html  ssapy.compute.M_v_lambertian.html  ssapy.compute.altaz.html  ssapy.compute.calc_M_v.html  ssapy.compute.calc_gamma.html  ssapy.compute.calculate_orbital_elements.html  ssapy.compute.dircos.html  ssapy.compute.earthShadowCoords.html  ssapy.compute.earth_shine.html  ssapy.compute.find_passes.html  ssapy.compute.getAngle.html  ssapy.compute.groundTrack.html  ssapy.compute.keplerian_orbital_elements.html  ssapy.compute.lagrange_points_lunar_frame.html  ssapy.compute.lunar_lagrange_points.html  ssapy.compute.lunar_lagrange_points_circular.html  ssapy.compute.moon_normal_vector.html  ssapy.compute.moon_shine.html  ssapy.compute.nby3shape.html  ssapy.compute.quickAltAz.html  ssapy.compute.radec.html  ssapy.compute.radecRate.html  ssapy.compute.radecRateObsToRV.html  ssapy.compute.refine_pass.html  (+283 more)
devel/: .gitignore  angles_to_orbits.ipynb  catalog_to_apparent.c  export_cache.py  import_cache.py
docs/: Makefile  README.rst  requirements.txt
include/: ssapy.h
modules/: ssapy.accel.html  ssapy.body.html  ssapy.compute.html  ssapy.constants.html  ssapy.correlate_tracks.html  ssapy.ellipsoid.html  ssapy.gravity.html  ssapy.io.html  ssapy.linker.html  ssapy.orbit.html  ssapy.orbit_solver.html  ssapy.particles.html  ssapy.plotUtils.html  ssapy.propagator.html  ssapy.rvsampler.html  ssapy.simple.html  ssapy.utils.html
pysrc/: ssapy.cpp
scripts/: build_ssapy.sh  ssapy_data_manager.py
src/: ssapy.cpp
ssapy/: __init__.py  accel.py  body.py  compute.py  constants.py  coordinates.py  correlate_tracks.py  data_loader.py  data_utils.py  ellipsoid.py  gravity.py  io.py  linker.py  orbit.py  orbit_solver.py  particles.py  plotUtils.py  propagator.py  rvsampler.py  simple.py  update_benchmarks.py  utils.py
tests/: __init__.py  ssapy_test_helpers.py  test_accel.py  test_collision_event.py  test_compute.py  test_data_download.py  test_ellipsoid.py  test_frame.py  test_io.py  test_linker.py  test_orbit.py  test_orbit_solver.py  test_particles.py  test_plots.py  test_plotutils.py  test_sampler.py  test_simple.py  test_tracks.py  test_utils.py
(+35 files in other folders)
