[project]
name = "llnl-ssapy"
version = "1.1.1"
authors = [
    { name="LLNL SSAPy Software Team", email="yeagerastro@gmail.com" },
]
description = "A fast, flexible, high-fidelity orbital modeling and analysis tool for orbits spanning from low-Earth orbit into the cislunar regime."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
        'numpy<2.0',
        'scipy',
        'astropy',
        'pyerfa',
        'emcee',
        'lmfit',
        'sgp4',
        'matplotlib',
        'pandas',
        'h5py',
        'pypdf2',
        'imageio',
        'ipython',
        'ipyvolume',
        'ipython_genutils',
        'jplephem',
        'tqdm',
        'myst-parser',
        'graphviz',
    ]

[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build", "cmake"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ssapy"]
include-package-data = true

[tool.setuptools.package-data]
ssapy = ["*.cpp", "*.h"]

[tool.setuptools.exclude-package-data]
ssapy = ["data/*"]

[tool.poetry]
packages = [
    { include = "ssapy" },
]

[tool.poetry.include]
files = ["ssapy/_ssapy.cpython-38-x86_64-linux-gnu.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"

[project.urls]
Homepage = "https://github.com/LLNL/SSAPy"
Issues = "https://github.com/LLNL/SSAPy/issues"
Documentation = "https://software.llnl.gov/SSAPy/" 
